--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,8 +32,11 @@ jobs:
     - name: Build exe with PyInstaller
       run: |
         pyinstaller --onefile GuessTheNumber.py
+    - name: List files in dist
+      run: |
+        ls -la dist
     - name: Upload exe as artifact
       uses: actions/upload-artifact@v3
       with:
         name: GuessTheNumber
-        path: dist/GuessTheNumber.exe  # 替换为生成的 exe 文件名
+        path: dist/GuessTheNumber.exe
