--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: GuessTheNumber
-        path: dist/GuessTheNumber.exe
+        path: dist/GuessTheNumber  # 没有 .exe 后缀
