--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4  # 更新到 v4
       with:
         python-version: "3.10"
     - name: Install dependencies
@@ -36,7 +36,7 @@ jobs:
       run: |
         ls -la dist
     - name: Upload exe as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # 更新到 v4
       with:
         name: GuessTheNumber
-        path: dist/GuessTheNumber  # 没有 .exe 后缀
+        path: dist/GuessTheNumber
